--- a/lib/l10n/intl_ar.arb
+++ b/lib/l10n/intl_ar.arb
@@ -118,7 +118,7 @@
   "CdRoom":"قرص مدمج" ,
   "PowerSupply":"مزود الطاقة",
   "Motherboard":"اللوحة الأم",
-  "piece":"قطعة",
+  "price":"السعر",
   "Similar_Products":"منتجات مماثلة",
   "Welcome":"مرحبًا بك في تطبيقنا أسعار القطع",
   "Start":"هيا نبدأ",
