--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -123,7 +123,7 @@
   "CdRoom":"CdRoom" ,
   "PowerSupply":"PowerSupply",
   "Motherboard":"Motherboard",
-  "piece":"piece",
+  "price":"price",
   "Similar_Products":"Similar Products",
   "Start":"Get Started",
   "Welcome":"Welcome To Our App Cat price",
