--- a/lib/l10n/intl_ar.arb
+++ b/lib/l10n/intl_ar.arb
@@ -111,7 +111,7 @@
   "Day": "اليوم",
   "Week": "الاسبوع",
   "Palladium": "البلاديوم",
-  "Platinum":"البلاديوم",
+  "Platinum":"بلاتين",
   "Rhodium":"الروديوم",
   "Computer":"حاسوب",
   "Ram":"رام",
