--- a/lib/l10n/intl_ar.arb
+++ b/lib/l10n/intl_ar.arb
@@ -111,7 +111,7 @@
   "Day": "اليوم",
   "Week": "الاسبوع",
   "Palladium": "البلاديوم",
-  "Platinum":"البلاديوم",
+  "Platinum":"البلاتنيوم",
   "Rhodium":"الروديوم",
   "Computer":"حاسوب",
   "Ram":"رام",
@@ -125,5 +125,25 @@
 
   "Screen1" : "اهلا بك في عالم من المميزات التي لن تجدها في برامج اخرى",
     "Screen2" : " تمتع وتصفح كمية ضخمة من المحفزات والبراندات والالكترونيات والمزيد قادم",
-    "Screen3" : "سنقدم لك تجربة فريدة من بين البرامج لترى أفض أسعار وأقوى مميزات باشتراكات زهيدة وتطور مستدام"
+    "Screen3" : "سنقدم لك تجربة فريدة من بين البرامج لترى أفض أسعار وأقوى مميزات باشتراكات زهيدة وتطور مستدام",
+     "yearly": "سنويا",
+      "monthly": "شهريا",
+      "subscription": "الاشتراك",
+      "goldSubscription": "الاشتراك الذهبى",
+      "platinumSubscription": "الاشتراك البلاتيني",
+      "broSubscription": "اشتراك اخر",
+      "fullSearch": "بحث كامل",
+      "users": "1 مستخدم",
+      "myCatalog": "قائمتى",
+      "calculator": "الحاسبة",
+      "payNow": "ادفع الآن",
+      "username": "اسم المستخدم",
+      "subscriptionType": "نوع الاشتراك",
+      "paymentMethod": "طريقة الدفع",
+      "accountNumberOrName": "اسم/ رقم الحساب الذى تم تحويل المبلغ منه",
+      "paymentHistory": "سجل الدفع",
+      "cost": "التكلفة",
+      "submit": "إرسال",
+      "search": "بحث",
+      "catPrice": "أسعار القطع"
 }
